<resources>
    <string name="app_name">Rancho São José</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="Entrar">entrar</string>
    <string name="salvar">Salvar</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="senha">Senha:</string>
    <string name="login">Login:</string>
    <string name="descricao">Descrição generica para todas as imagens</string>
    <string name="nome_funcionario">Nome do Funcionario:</string>
    <string name="nome_usuario">Nome de Usuario:</string>
    <string name="email">Email:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sair">Sair</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_inicio">Inicio</string>
    <string name="mesa">Mesa:</string>
    <string name="comida">HAMBERGERS:</string>
    <string name="quantidade">Quantidade</string>
    <string name="burger_rancho">Burger Rancho</string>
    <string name="burger_jose">Burger Jose</string>
    <string name="burger_santada">Burger Santana</string>
    <string name="burger_mirim">Burger Mirim</string>
    <string name="burger_jardim">Burger Jardim</string>
    <string name="burger_faustino">Burger Faustino</string>
    <string name="petiscos">PETISCOS:</string>
    <string name="add_hamburger">Adicionar Hamburger</string>
    <string name="add_petiscos">Adicionar Petiscos</string>
    <string name="add_bebidas">Adicionar Bebidas</string>
    <string name="salvar_pedido">Salvar Pedido</string>
    <string-array name="mesas">
        <item> </item>
        <item>Mesa 01</item>
        <item>Mesa 02</item>
        <item>Mesa 03</item>
        <item>Mesa 04</item>
        <item>Mesa 05</item>
    </string-array>
</resources>