<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.Activity.CadastroPedidosActivity">

    <Spinner
        android:id="@+id/spinnerMesas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/mesa"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:text="@string/mesa"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/comida"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMesas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiminuir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="16dp"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdicionar"
        app:layout_constraintStart_toEndOf="@+id/buttonDiminuir"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMesas" />

    <Button
        android:id="@+id/buttonAdicionar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="0dp"
        android:contentDescription="@string/action_sign_in"
        android:includeFontPadding="false"
        app:backgroundTint="#00673AB7"
        app:icon="@drawable/ic_adicionar_preto_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="28dp"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_marginBaseline="0dp" />

    <Button
        android:id="@+id/buttonDiminuir"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="0dp"
        android:layout_marginStart="24dp"

        android:layout_marginEnd="33dp"
        android:contentDescription="@string/action_sign_in"
        app:backgroundTint="#00673AB7"
        app:icon="@drawable/ic_baseline_remove_24"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="28dp"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout5"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_marginBaseline="0dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/quantidade"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="@+id/buttonDiminuir" />
</androidx.constraintlayout.widget.ConstraintLayout>